fixed quick-link spacing

--- a/src/styles/sassets/navigation-bar.scss
+++ b/src/styles/sassets/navigation-bar.scss
@@ -6,13 +6,13 @@
     box-shadow: 0 2px 5px 0px #c7c7c7;
 }
 
-.nav-link, .navbar-brand {
+.navbar-brand {
     color: white !important;
-    font-size: 16px !important;
+    font-size: 18px !important;
     flex-direction: row !important;
 
     @include tablet-landscape {
-        font-size: 16px !important;
+        font-size: 18px !important;
     }
 }
 
@@ -22,6 +22,10 @@
     @include tablet-landscape {
         margin-right: 16px !important;
     }
+}
+
+.nav-link {
+    color: white !important;
 }
 
 .logo {
