--- a/src/styles/sassets/quick-links.scss
+++ b/src/styles/sassets/quick-links.scss
@@ -63,6 +63,7 @@
     .material-icons {
         max-width: 24px;
         max-height: 24px;
+        margin-right: 8px;
     }
 
     .quick-link-label {
